# AZDARA

./: .gitignore  SyncSettings.ffs_batch  SyncSettings.ffs_gui  desktop.ini
Godot/: .gitignore  main.tscn  project.godot
Godot/aban/: aban.tscn
Godot/contents/: icon.png.import  smooth_icon.png.import
Godot/exports/: win64.pck
Godot/game_select/: game_select.gd  (+1 more)
Rust/: .gitignore  Cargo.toml  build.ps1  scenario.json
Rust/src/: gal.rs  game.rs  gbevy.rs  lib.rs  log.rs  package_manager.rs
Rust/src/aban/: mod.rs
Rust/src/character/: mod.rs
Rust/src/com/: canvas_item.rs  input_move_dir.rs  mod.rs  movement_speed.rs  player.rs  texture.rs
Rust/src/game/: com.rs  ecs.rs  gbevy.rs  mod.rs  msg.rs  res.rs  save_data.rs  srm.rs  state.rs  sys.rs  time.rs
Rust/src/game/ecs/: com.rs  res.rs  sys.rs
Rust/src/game/ecs/res/: navigation2d.rs  world_space.rs
Rust/src/game/gbevy/: com.rs  receive_handler.rs  server_test.rs  sys.rs
Rust/src/game/res/: input.rs  msg.rs  physics_server.rs
Rust/src/game/time/: m01_farvardin.rs  m02_ordibehesht.rs  m03_khordad.rs  m04_tir.rs  m05_mordad.rs  m06_shahrivar.rs  m07_mehr.rs  m08_aban.rs  m09_azar.rs  m10_dey.rs  m11_bahman.rs  m12_esfand.rs  m12_esfand_leap.rs
Rust/src/gnab/: mod.rs
Rust/src/helpers/: mod.rs  navpoly_builder.rs
Rust/src/log/: alert.rs  alert_message.rs  console.rs  file_log.rs  mod.rs
Rust/src/rapier/: mod.rs
Rust/src/res/: canvas.rs  delta.rs  input.rs  mod.rs  resource_loader.rs  visual_server.rs
Rust/src/sys/: input.rs  mod.rs  movement.rs  ready.rs
Rust/src/test/: mod.rs
(+109 files in other folders)
