[package]
name = "azdara"
version = "0.1.0"
authors = ["Sarvarian <Sarvarian@Hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.9.3"
legion = "0.3.1"
euclid = "0.22.1"
serde = "1.0.123"
serde_json = "1.0.62"