[package]
name = "azdara"
version = "0.1.0"
authors = ["Sarvarian <Sarvarian@Hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

# [target.aarch64-linux-android]
# linker = "$ANDROID_HOME/ndk/22.1.7171670/toolchains/llvm/prebuilt/windows-x86_64/bin/aarch64-linux-android29-clang"

[dependencies]
gdnative = "0.9.3"
chrono = "0.4.19"
legion = "0.4.0"